updated application.js to correctly identify the 'prior' div id, now the show and hide of image and animated image works. updated application.css.scss to put a border around animated gif. updated show page to keep time above the images so it's always visible.

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -24,6 +24,8 @@
 }
 .animated_display {
   display: none;
+  border: solid 1px black;
+  margin: 0 auto;
 }
 #index_img {
   height: 80%;
